# MIA_1S2026_P2_202113318

./: README.md
ExtreamFS/backend/: CMakeLists.txt
ExtreamFS/backend/include/api/: HttpServer.h
ExtreamFS/backend/include/core/: Analyzer.h
ExtreamFS/backend/include/disk/: DiskManagement.h  MountManager.h  Structs.h
ExtreamFS/backend/include/fs/: Ext2Structs.h  FileSystemManager.h  SessionManager.h
ExtreamFS/backend/include/reports/: ReportManager.h
ExtreamFS/backend/src/: main.cpp
ExtreamFS/backend/src/api/: HttpServer.cpp
ExtreamFS/backend/src/core/: Analyzer.cpp
ExtreamFS/backend/src/disk/: DiskManagement.cpp  MountManager.cpp
ExtreamFS/backend/src/fs/: FileSystemManager.cpp  SessionManager.cpp
ExtreamFS/backend/src/reports/: ReportManager.cpp
ExtreamFS/frontend/extreamfs-frontend/: README.md  angular.json  package-lock.json  package.json
ExtreamFS/frontend/extreamfs-frontend/src/: index.html
ExtreamFS/frontend/extreamfs-frontend/src/app/: app.component.css  app.component.html  app.component.spec.ts  app.component.ts  backend.service.ts
